--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -4,7 +4,7 @@ script_location = alembic
 
 prepend_sys_path = .
 
-version_path_separator = os
+# version_path_separator = os
 
 
 sqlalchemy.url = %(DATABASE_URL)s
