--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,8 +1,5 @@
 /venv/
-/src/settings/common/local_*
-/src/settings/dev/local_*
-/src/settings/prod/local_*
-/src/settings/tests/local_*
+*local_*
 
 # Времено
 /alembic/versions/
